Overview of changes in xtickertape-2.0

* Groups now conform to both the old message format and the v3.0 draft
  specification.

* Created a new widget (class History) to display the last few
  messages.  The length of the history can be specified by setting
  the XTickertape.history.messageCapacity X resource.  See the man
  page for additional History widget resources.

* Replaced tool-tips with a status bar.

* Changed the application class from `Tickertape' to `XTickertape'.

* No longer redirecting the output of `metamail' to /dev/null, and
  using the `-x' option so that it doesn't try to talk to the tty.
  [Thanks David Leonard]

* Also passing the mime args to metamail through a pipe instead of a
  temporary file.  [Thanks David Leonard]

* Fixed a bug in the way the icon was created.  Now the big `e' will
  be red even on 8-bit displays.

* The scroller can now operate without an offscreen pixmap.  This
  enables hardware optimizations with some graphics cards, but results 
  in more traffic between the client and server.  The offscreen pixmap 
  option can still be enabled by setting the X resource
  XTickertape.scroller.usePixmap to True.

* Message replacement now works!

* Updated to use the elvin-4 client library instead of the elvin-3
  client library.

* Using elvin's sha1digest function instead of crypt, and encrypting
  the entire message-id instead of just the host id to make it
  reasonably difficult to subvert the sender's anonymity.
  [Thanks Ian Lister]

* Using the elvin-4 `opaque' type to represent an attachment rather
  than a `string'.  This makes it possible to display images, play
  sounds or view anything else you have a decoder for via tickertape.
  Of course, getting those things attached is somewhat tricky.
  [Thanks Martin Wanicki]

* The `show-menu' action now maps the control panel window so that it
  will be visible even if it has been iconified [Thanks David Leonard]

Overview of changes in xtickertape-1.6.6
